Moved web module into subfolder. Added root project markdown files

--- a/cargo-web/conf/application.conf
+++ b/cargo-web/conf/application.conf
@@ -1,16 +1,10 @@
-# This is the main configuration file for the application.
-# https://www.playframework.com/documentation/latest/ConfigFile
-# ~~~~~
+include "default"
 
-include "default.conf"
-
-## Evolutions
-# ~~~~~
-
-# libraryDependencies += evolutions
-
-play.evolutions {
-  #db.default.enabled = false
+play {
+   http.secret.key="changemechangemechangemechangemechangeme"
+   evolutions {
+     #db.default.enabled = false
+   }
 }
 
 ## Database Connection Pool
