Basic styling. First flow of accepting first job, bank loan and buying a truck.

--- a/cargo-web/conf/default.conf
+++ b/cargo-web/conf/default.conf
@@ -2,11 +2,15 @@
 play {
    i18n.langs = [ "en" ]
    evolutions {
-      
+
    }
    filters {
       enabled += play.filters.gzip.GzipFilter
       disabled += play.filters.hosts.AllowedHostsFilter
+      headers {
+         contentSecurityPolicy = "default-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com; font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;"
+         allowActionSpecificHeaders = true
+      }
    }
 }
 
