Basic Slick integration

--- a/cargo-web/conf/default.conf
+++ b/cargo-web/conf/default.conf
@@ -1,8 +1,9 @@
 
 play {
    i18n.langs = [ "en" ]
-   evolutions {
-
+   evolutions.db.default {
+     autoApply = true
+     autoApplyDowns = false
    }
    filters {
       enabled += play.filters.gzip.GzipFilter
