--- a/cargo-web/conf/application.conf
+++ b/cargo-web/conf/application.conf
@@ -2,25 +2,17 @@ include "default"
 
 play {
    http.secret.key="changemechangemechangemechangemechangeme"
-   evolutions {
-     #db.default.enabled = false
+   evolutions.db.default {
+     autoApplyDowns = true
    }
 }
 
-## Database Connection Pool
-# ~~~~~
-
-play.db {
-  #config = "db"
-  #default = "default"
-}
-
-## JDBC Datasource
-# ~~~~~
-# Slick (Scala preferred option): https://www.playframework.com/documentation/latest/PlaySlick
-db {
-  #default.driver = org.h2.Driver
-  #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
+slick.dbs.default {
+   profile = "slick.jdbc.H2Profile$"
+   db {
+      driver = "org.h2.Driver"
+      url = "jdbc:h2:mem:play;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=FALSE"
+      user = "sa"
+      password = ""
+   }
 }
